syntax = "proto3";

package kolide.agent;

service Api {

    //////////////////////
    // Core Service
    //////////////////////

    // Attempt to enroll a host with kolide/cloud
    rpc RequestEnrollment(EnrollmentRequest) returns (EnrollmentResponse) {}

    // request an updated configuration from kolide/cloud
    // a generic request object is sent
    rpc RequestConfig(AgentApiRequest) returns (ConfigResponse) {}

    // request/pull Dist queries from kolide/cloud
    // a generic request object is sent
    rpc RequestQueries(AgentApiRequest) returns (QueryCollection) {}

    // publish logs from osqueryd to kolide/cloud
    // a generic response object is returned
    rpc PublishLogs(LogCollection) returns (AgentApiResponse) {}

    // publish results from Dist queries to kolide/cloud
    // a generic response object is returned
    rpc PublishResults(ResultCollection) returns (AgentApiResponse) {}


    // check the health of the GRPC server
    // a value indicating healthiness is returned
    // if you don't hear from this endpoint assume the worst
    rpc CheckHealth(AgentApiRequest) returns (HealthCheckResponse) {}

}


//////////////////////
// Generics
//////////////////////

message AgentApiRequest {
    string node_key = 1;
}

message AgentApiResponse {
     string message=1;
     string error_code = 2;
     bool node_invalid = 3;
}


//////////////////////
// Enrollment
//////////////////////

message EnrollmentRequest {
    string enroll_secret = 1;
    string host_identifier = 2;
}

message EnrollmentResponse {
    string node_key = 1;
    bool node_invalid = 2;
    string error_code = 3;
}


//////////////////////
// Configuration
//////////////////////

// kolide/cloud will be generating well-structured json already, so forward
// it along instead of de/re/de-serializing it as a protobuf too
// this might make sense to convert to full proto later
message ConfigResponse {
    string config_json_blob = 1;
    bool node_invalid = 2;
    string error_code = 3;
}


//////////////////////
// Logging
//////////////////////

message LogCollection {
    string node_key = 1;
    LogType log_type = 2;
    repeated Log logs = 3;
    string error_code = 4;

    // AGENT is added as a new log type, for adding new
    // logging capabilities from kolide/agent
    enum LogType {
        RESULT = 0;
        STATUS = 1;
        AGENT  = 2;
    }

    message Log {
        string data = 1;
    }
}


//////////////////////
// Requested Queries
//////////////////////

// a query collection contains many queries
message QueryCollection {
    repeated Query queries = 1;
    bool node_invalid = 2;
    string error_code = 3;

    message Query {
        string id = 1;
        string query = 2;
    }
}


//////////////////////
// Query Results
//////////////////////

// a result collection contains many results
message ResultCollection {
    string node_key = 1;
    repeated Result results = 2;
    string error_code = 3;

    // status is moved here instead of appearing as a map of id[status]
    // on the ResultCollection, as it does in the osq docs
    message Result {
        string id = 1;
        repeated ResultRow rows = 2;
        int32 status = 3;

        message ResultRow {
            repeated Column columns = 1;

            message Column {
                string name = 1;
                string value = 2;
            }
        }
    }
}

//////////////////////
// health
//////////////////////


message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

//////////////////////
// generate code
//////////////////////

// go
// protoc -I=. ./agent_api.proto --go_out=plugins=grpc:.

// ruby
// grpc_tools_ruby_protoc -I ./ --ruby_out=. --grpc_out=. ./agent_api.proto
